--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://jihyun-jeon.github.io/intargram/",
+  "homepage": "https://jihyun-jeon.github.io/instargram/",
   "name": "westargram-3team",
   "version": "0.1.0",
   "private": true,
